Añadido endpoint GET con cambios pertinentes
